# nautilus-admin

./: AUTHORS  CMakeLists.txt  CONTRIBUTING.md  INSTALL  INSTALL.md  LICENSE  NEWS  README.md  README.mkd  generate-pot-file.sh  nautilus-admin.appdata.xml
extension/: nautilus-admin.py
po/: ar.po  be.po  cs.po  de.po  es.po  fr.po  it.po  lt.po  nautilus-admin.pot  pl.po  pt.po  ru.po  sk.po  tr.po  zh_CN.po
polkit/: org.freedesktop.nautilus-admin.policy
